task-900aW076-2 fixed extra space under block Main and Menu

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -20,7 +20,7 @@ body {
   left : 0;
   width: 200px;
   top: 50px;
-  bottom: 120px;
+  bottom: 100px;
   margin: 0;
   padding: 0;
 }
@@ -30,13 +30,13 @@ body {
   left: 200px;
   right: 0;
   top: 50px;
-  bottom: 120px;
+  bottom: 100px;
 }
 
 .global-footer {
   position: absolute;
   left: 0;
-  width: calc(100% - 20px);
+  width: 100%;
   bottom: 0;
   height: 100px;
 }
